tests/NormalTests/paczka1/small_fuzzy/13169133.err
Error in line 2: M0vcCvGfS48091,8
Error in line 8: S491 S894 389,05
Error in line 1: tGrrGU1 S894 61,9
Error in line 5: S491 S894 85,8
Error in line 16: S$91 S590 61,7
